--- a/portfolio/src/pages/main.css
+++ b/portfolio/src/pages/main.css
@@ -1,81 +1,61 @@
-.grid-container{
-    display: grid;
-    grid-template-columns: 1.3fr .8fr 1.5fr;
-    grid-template-rows: 1.3fr 4fr 3fr 2fr;
-    height: 100vh;
-    margin: 0rem 2rem
-}
-
-main{
-    /* grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3; 
-    EQUALS THE SAME AS BELOW
-    */
-
-    /* grid-column: 1 / 3;
-    grid-row: 1 / 3; */
-
-    grid-area:  1 / 1 / 3 / 3;
+.main-body{
+    background-color: black;
     
-    margin: 10rem 10rem;
+}
+
+.main-contaner{
+    margin-top: 3%;
+    background-color: black;
+}
+
+.sec-1{
+    margin-top: 5%
+}
+.pic{
+    height: 80vh
+}
+.sec-1{
     color: white;
-    font-size: 3rem;
-    animation-name: mainslide;
-    animation-duration: 2s;
 }
-@keyframes mainslide {
-    0%{
-        transform: translateX(-100%);
+.sec-hi{
+    margin-bottom: 15%;
+    font-size: 5rem;
+}
+
+.sec-body{
+    margin-left: 6%;
+    line-height: 150%;
+    
+}
+
+.sec-social{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 10%;
+}
+
+.sec-bottom{
+    margin-top: 50%;
+    text-align: right;
+}
+
+@media screen and (max-width: 800px){
+    .sec-2{
+        display: none;
     }
-   
-    100%{
-        transform: translateX(0%)
+    .sec-1{
+        text-align: center;
+        width: 100%;
     }
-}
-
-section.sec-1{
-    grid-area: 3/ 1 / 5 / 3;
-    color: rgb(189, 180, 180);
-    width: 75%;
-    margin-left: 5rem
-}
-section.sec-2{
-    grid-area: 4/ 1 / 5 / 3;
-    margin: auto;
-    color: white
-}
-
-div.sec-3{
-    grid-area: 2 / 3 / 5 / 3;
-    background-image: url('../img/mepinkshirt.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 70%;
-    border-radius: 36px;
-    animation-name: mainpic;
-    animation-duration: 2s;
-}
-
-@keyframes mainpic {
-    0%{
-        transform: translateX(200%);
+   .sec-body{
+        min-width: 100%;
+        margin-left: 0%
+        
     }
-   
-    100%{
-        transform: translateX(0%)
+    .sec-bottom{
+        text-align: center;
+        width: 100%;
+       
     }
+    
 }
-
-
-
-header{
-    grid-area: 1 / 3 /  2 / 4;
-    display:flex;
-    flex-direction: row;
-    justify-content: space-around;
-    color: white;
-    font-size: 1.5rem;
-}
-
