--- a/portfolio/src/compontent/MyProject.css
+++ b/portfolio/src/compontent/MyProject.css
@@ -27,6 +27,14 @@
 .p4{
   margin-top: 5%;
 }
+.p5{
+  margin-top: 5%;
+}
+
+.button-group{
+  display: flex;
+  justify-content: space-evenly;
+}
 
 /* @media screen and (max-width: 769px){
   .p2{
