--- a/portfolio/src/compontent/MyProject.css
+++ b/portfolio/src/compontent/MyProject.css
@@ -20,6 +20,12 @@
 .p2{
   margin-top: 5%;
 }
+img.card-img-top{
+  height: 180px;
+}
+div.card-body{
+  height: 220px
+}
 .p3{
   margin-top: 5%;
 }
