--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,11 +1,20 @@
 body {
   margin: 0;
-  background-color: black;
+  color: black;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: linear-gradient(30deg, rgba(245, 246, 252, 0.26), rgba(0, 0, 0, 0.73)),
+   url('https://images.unsplash.com/photo-1612334001585-7887b4217d3e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80');
+  background-color: rgba(76, 175, 80, 0.3) ;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   
   
 }
