--- a/portfolio/src/pages/main.css
+++ b/portfolio/src/pages/main.css
@@ -1,15 +1,16 @@
 .main-body{
-    background-color: black;
+    /* background-color: black; */
     
 }
 
 .main-contaner{
     margin-top: 3%;
-    background-color: black;
+    /* background-color: black; */
 }
 
 .sec-1{
-    margin-top: 5%
+    margin-top: 5%;
+    
 }
 .pic{
     height: 80vh
@@ -20,11 +21,14 @@
 .sec-hi{
     margin-bottom: 15%;
     font-size: 5rem;
+    /* font-weight: 800; */
 }
 
 .sec-body{
     margin-left: 6%;
     line-height: 150%;
+    /* font-weight: 800; */
+    background-color: rgba(255, 255, 255, 0.055);
     
 }
 
@@ -32,6 +36,7 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 10%;
+    font-weight: 800;
 }
 
 .sec-bottom{
