--- a/portfolio/src/compontent/MyProject.css
+++ b/portfolio/src/compontent/MyProject.css
@@ -13,58 +13,59 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
-@media(max-width: 1200px){
-
-  .projects-flex1{
+.p1-body {
+  height: 300px;
+}
+@media (max-width: 1200px) {
+  .p1-body {
+    height: 350px;
+  }
+  .projects-flex1 {
     /* text-align: center; */
     flex-direction: column;
-  padding: 0px;
+    padding: 0px;
     align-items: center;
     /* margin: auto; */
   }
 
- div .p1-image{
-width: 300px;
-height: 80%;
+  div .p1-image {
+    width: 300px;
+    height: 80%;
   }
 
- div .p1-body{
+  div .p1-body {
     width: 300px;
-
   }
 }
-@media(max-width: 480px){
- div .projects-flex1{
-  /* text-align: center; */
-  align-items: flex-start;
-  padding-left: 10%;
+@media (max-width: 480px) {
+  div .projects-flex1 {
+    /* text-align: center; */
+    align-items: flex-start;
+    padding-left: 10%;
     /* margin: auto; */
   }
-
-
 }
 .p1 {
   margin-top: 5%;
   width: 48%;
-  
 }
 
-.p1-body{
+.p1-body {
   color: white;
-  width: 480px ;
+  width: 480px;
   background-color: rgba(3, 3, 3, 0.357);
-  padding-left: 2%;  
+  padding-left: 2%;
 }
 
-.p1-title{
+.p1-title {
   padding-top: 3%;
   font-weight: 800;
 }
-.p1-info{
+.p1-info {
   font-size: 1.5rem;
-  margin-top: 5%
+  margin-top: 5%;
 }
-.p1-button-group{
+.p1-button-group {
   text-align: center;
   margin-top: 10%;
   padding-bottom: 5%;
@@ -72,34 +73,33 @@ height: 80%;
   display: flex;
   justify-content: space-evenly;
 }
-a{
+a {
   text-decoration: none;
 }
-.p1-button1{
+.p1-button1 {
   background-color: rgba(10, 10, 10, 0);
-  
-  box-shadow: 5px 5px 11px -2px #707070;
-  width: 55px;
-  height: 50px;
-  border-radius: 10%;
-  color: white;
-  padding-top: 15px;
-}
-.p1-button2{
-  background-color: rgba(10, 10, 10, 0);
-  box-shadow: 5px 5px 11px -2px #707070;
-  width: 55px;
-  height: 50px;
-  border-radius: 10%;
-  color: white;
-  padding-top: 15px;
 
+  box-shadow: 5px 5px 11px -2px #707070;
+  width: 55px;
+  height: 50px;
+  border-radius: 10%;
+  color: white;
+  padding-top: 15px;
 }
-.p1-image{
+.p1-button2 {
+  background-color: rgba(10, 10, 10, 0);
+  box-shadow: 5px 5px 11px -2px #707070;
+  width: 55px;
+  height: 50px;
+  border-radius: 10%;
+  color: white;
+  padding-top: 15px;
+}
+.p1-image {
   width: 480px;
   height: 30vh;
 }
-h2{
+h2 {
   color: white;
 }
 .p2 {
